--- a/config-client-dev.yml
+++ b/config-client-dev.yml
@@ -1,2 +1,21 @@
 neo:
     hello: dev update
+
+spring:
+  application:
+    name: eureka-consumer
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:7002/eureka/
+server:
+  port: 8001
+feign:
+  hystrix:
+    enabled: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: hystrix.stream
